CODE STRUCTURE FIXING DONE

--- a/public/login.html
+++ b/public/login.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Login Page</h1>
-        <form action="/api/users/login" method="post">
+        <form action="/api/login" method="post">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required><br>
             
@@ -17,7 +17,7 @@
             <button type="submit">Login</button>
         </form>
 
-        <a href="/register">SignUp Page</a>
+        <a href="/api/register">SignUp Page</a>
         
     </body>
 </html>
