--- a/public/signup.html
+++ b/public/signup.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Sign Up</h1>
-        <form action="/api/users/register" method="post">
+        <form action="/api/register" method="post">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required><br>
         
@@ -17,6 +17,6 @@
             <button type="submit">Sign Up</button>
         </form>
 
-        <a href="/login">Login Page</a>
+        <a href="/api/login">Login Page</a>
     </body>
 </html>
